kubernetes/truenas/traefik-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: truenas
spec:
  type: ExternalName
  externalName: truenas.mng.skaal.lan
  ports:
    - port: 443
      targetPort: 443

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: truenas
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.skaal.dev`)
      kind: Rule
      services:
        - name: truenas
          port: 443
          scheme: https
          serversTransport: truenas
  tls:
    secretName: truenas-tls
